Add boolean for showing Github projects widget.

--- a/source/_includes/asides/github.html
+++ b/source/_includes/asides/github.html
@@ -1,4 +1,4 @@
-{% if site.github_user %}
+{% if site.github_user and site.github_show_projects %}
 <h2>recent public projects</h2>
 <dl id="gh_repos" class="dl-horizontal" data-github-user="{{ site.github_user }}" data-github-repo-count="{{ site.github_repo_count }}" data-github-skip-forks="{{ site.github_skip_forks }}">
   <dd class="loading">Status updating...</dd>
